# ONNX-YOLOv8-Object-Detection

./: export_onnx.py  image_object_detection.py
source/: CMakeLists.txt  load_onnx.cpp  main.cpp  readme.md
source/pass_onnx/: fold_constants.cpp
source/runtime/: Allocator.cpp  Allocator.h  mat.cpp  mat.h
